--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.17",
+    "@react-three/fiber": "^8.16.6",
     "@types/node": "^20.10.4",
     "@types/react": "^18.2.42",
     "@types/react-dom": "^18.2.17",
     "aos": "^3.0.0-beta.6",
     "next": "^14.0.4",
+    "openai": "^4.47.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "three": "^0.164.1",
