--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "three": "^0.164.1",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "ws": "^8.17.0"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
     "@types/aos": "^3.0.7",
     "@types/three": "^0.164.1",
+    "@types/ws": "^8.5.10",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.3.6"
