--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "dev2": "tsx watch ./scripts/server/main.ts",
     "dev3": "concurrently --kill-others \"npm run dev\" \"npm run dev2\"",
-	"build": "next build",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
@@ -21,6 +21,7 @@
     "openai": "^4.47.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-sizeme": "^3.0.2",
     "server-only": "^0.0.1",
     "three": "^0.164.1",
     "tsx": "^4.10.5",
