--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "@headlessui/react": "^1.7.17",
+    "@mui/icons-material": "^5.15.18",
+    "@mui/material": "^5.15.18",
     "@react-three/fiber": "^8.16.6",
     "@types/node": "^20.10.4",
     "@types/react": "^18.2.42",
