--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "dev2": "tsx watch ./scripts/server/main.js",
-    "dev3": "concurrently --kill-others \"npm run dev\" \"npm run dev2\"",
+    "dev-next": "next dev",
+    "dev-server": "tsx watch ./scripts/server/main.js",
+    "dev-con": "concurrently --kill-others \"npm run dev-next\" \"npm run dev-server\"",
+    "dev": "tsx ./scripts/prebuild/indexComponents.js && npm run dev-con",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
