--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,5 +24,5 @@
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "**/*.jsx", "scripts/server/main.js"],
-  "exclude": ["node_modules", "**/*.auto.js"]
+  "exclude": ["node_modules"]
 }
