--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/react": "^18.2.42",
     "@types/react-dom": "^18.2.17",
     "aos": "^3.0.0-beta.6",
+    "cors": "^2.8.5",
     "express": "^4.19.2",
     "next": "^14.0.4",
     "openai": "^4.47.1",
