--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev-next": "next dev",
     "dev-server": "tsx watch ./scripts/server/main.js",
     "dev-con": "concurrently --kill-others \"npm run dev-next\" \"npm run dev-server\"",
-    "dev": "tsx ./scripts/prebuild/indexComponents.js && npm run dev-con",
+    "dev": "tsx ./scripts/prebuild/main.js && npm run dev-con",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
