--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@headlessui/react": "^1.7.17",
     "@mui/icons-material": "^5.15.18",
     "@mui/material": "^5.15.18",
+    "@react-oauth/google": "^0.12.1",
     "@react-three/fiber": "^8.16.6",
     "@types/node": "^20.10.4",
     "@types/react": "^18.2.42",
